--- a/raids/m11s.yaml
+++ b/raids/m11s.yaml
@@ -9,6 +9,10 @@ tier: AAC Heavyweight
 boss: the Tyrant
 HP: 154287371
 party_hp: 197477
+autos:
+  mechanic: auto.single
+  type: physical
+  damage: 71732
 wip: [diagrams]
 description: ""
 alias: [r11s]
