--- a/raids/m12s1.yaml
+++ b/raids/m12s1.yaml
@@ -243,7 +243,7 @@ actions:
       id: fourth-wall-fusion-random
   phagocyte-spotlight:
     id: 46238
-    mechanic: aoe.baitable
+    mechanic: aoe.delayed
     shape: chariot
     count: 8
     damage: 229465
