--- a/calendar.yaml
+++ b/calendar.yaml
@@ -844,3 +844,9 @@
   type: patch
   color: "#6e9cec"
   at: 2026-01-27 10:00:00
+- name: Valentione's Day
+  type: event
+  color: "#912777"
+  url: https://eu.finalfantasyxiv.com/lodestone/special/2026/Valentiones_Day/wenbvnlh6s
+  from: 2024-02-07 08:00:00
+  to: 2024-02-16 14:59:59
